2006-11-17  Stephen J. Turnbull  <stephen@xemacs.org>

	* xlwmenu.c (xlwMenuResources):
	* xlwmenu.c (XlwMenuInitialize):
	* xlwmenuP.h (_XlwMenu_part):
	* xlwtabs.c (resources):
	* xlwtabs.c (TabsInit):
	* xlwtabsP.h (TabsPart):
	New xftFontName member in each widget part struct, corresponds to
	xftFont String resource.
	Initialize renderFont private member from fcFontName if non-NULL,
	otherwise initialize from xftFontName.

	* xlwtabs.h: Update parameter table.

2006-06-16  Jerry James  <james@xemacs.org>

	* lwlib-Xlw.c (xlw_scrollbar_callback): Do not dereference
	instance before checking whether it is NULL.
	* xlwmenu.c (xlw_map_menu): Prevent uninitialized access to root
	and waste.

2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-05-12  Stephen J. Turnbull  <stephen@xemacs.org>

	Make fcFontName and xftFont separate resources.

	* lwlib-fonts.h (XtNfcFontName, XtCFcFontName): New macros.
	(XtNxftFont, XtCXftFont): Coalesce the conditional definitions.

	* xlwmenuP.h (XlwMenuPart):
	* xlwtabsP.h (TabsPart):
	Rename renderFontSpec member to fcFontName.

	* xlwmenu.c (XlwMenuResources):
	* xlwtabs.c (resources):
	Add a record for fcFontName.

	* xlwtabs.c (TabsInit): Use the fcFontName resource, not xftFont.

	* xlwtabs.c (DrawTab,TabLayout,TabsGeometryManager): Improve
	diagnostics.

2006-04-24  Jerry James  <james@xemacs.org>

	* lwlib-Xaw.c (lw_debug_print_class_resources): Casting from a
	pointer to an int throws away half of the bits on an x86_64
	platform.  Print as a pointer instead.
	* xlwgauge.c (XawGaugeSetValue): Use NULL instead of 0 as the
	sentinel to quiet gcc warnings.
	* xlwmenu.c: Cast to FcChar8 * as necessary to quiet warnings.
	* xlwtabs.c: Ditto.

2006-04-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* lwlib-fonts.c: Change #include to "font-mgr.h".  Make
	conditional on HAVE_FONTCONFIG, not USE_XFT.

2006-03-31  Stephen J. Turnbull  <stephen@xemacs.org>
